Day15: Pizza Shop Website Project - add header, style header, add icons

--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
@@ -14,11 +14,46 @@
 <body>
 
     <header class="header">
-        <h2>Header</h2>
+        <div class="header__top">
+            <div class="container">
+                <img class="header__logo" src="../assets/icons/papa-johns-logo.svg" alt="Papa Johns Logo">
+                <nav class="header__top-nav">
+                    <ul class="header__nav-list">
+                        <li class="top-nav-link"><a href="#">
+                                <div class="icon tracker"></div>
+                                <div>Track My Order</div>
+                            </a></li>
+                        <li class="top-nav-link"><a href="#">Start Your Order</a></li>
+                        <li class="top-nav-link"><a href="#"><span class="icon globe"></span><span>EN</span><span
+                                    class="icon down-arrow"></span></a></li>
+                        <li class="top-nav-link"><a href="#"><span>Log in</span><span
+                                    class="icon down-arrow"></span></a></li>
+                        <li class="top-nav-link"><a href="#">Sign up</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="container">
+            <div class="header__bottom">
+                <nav class="header__bottom-nav">
+                    <ul class="header__nav-list">
+                        <li class="bottom-nav-link"><a href="./menu.html">Menu</a></li>
+                        <li class="bottom-nav-link"><a href="./deals.html">Deals</a></li>
+                        <li class="bottom-nav-link"><a href="./rewards.html">papa rewards</a></li>
+                    </ul>
+                </nav>
+                <div class="header__promo-cart">
+                    Promo
+                </div>
+            </div>
+        </div>
+
     </header>
 
     <main class="main">
-        <h1>Home page</h1>
+        <section class="section hero">
+            <h1>Home page</h1>
+        </section>
 
     </main>
 
