Day15: Pizza Shop Website Project - style header's top nav

--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
@@ -16,19 +16,30 @@
     <header class="header">
         <div class="header__top">
             <div class="container">
-                <img class="header__logo" src="../assets/icons/papa-johns-logo.svg" alt="Papa Johns Logo">
+                <a href="#"><img class="header__logo" src="../assets/icons/papa-johns-logo.svg" alt="Papa Johns Logo"></a>
                 <nav class="header__top-nav">
                     <ul class="header__nav-list">
-                        <li class="top-nav-link"><a href="#">
+                        <li><a href="#" class="top-nav-link">
                                 <div class="icon tracker"></div>
                                 <div>Track My Order</div>
                             </a></li>
-                        <li class="top-nav-link"><a href="#">Start Your Order</a></li>
-                        <li class="top-nav-link"><a href="#"><span class="icon globe"></span><span>EN</span><span
-                                    class="icon down-arrow"></span></a></li>
-                        <li class="top-nav-link"><a href="#"><span>Log in</span><span
-                                    class="icon down-arrow"></span></a></li>
-                        <li class="top-nav-link"><a href="#">Sign up</a></li>
+                        <li><a href="#" class="top-nav-link">Start Your Order</a></li>
+                        <li>
+                            <a href="#" class="top-nav-link">
+                                <div class="icon globe"></div>
+                                <div>EN</div>
+                                <div class="icon down-arrow"></div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="top-nav-link">
+                                <div>Log in</div>
+                                <div class="icon down-arrow"></div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="top-nav-link button-green button-round" id="signup-btn">Sign up</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
