--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
@@ -39,7 +39,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="top-nav-link button-green button-round" id="signup-btn">Sign&nbsp;up</a>
+                            <a href="#" class="top-nav-link button button-green button-round" id="signup-btn">Sign&nbsp;up</a>
                         </li>
                     </ul>
                 </nav>
@@ -57,8 +57,8 @@
                 <div class="header__promo-cart">
                     <form class="promo-code-form">
                         <input class="promo-textbox" name="promo-code" type="text" placeholder="Enter a promo code"
-                            value="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
-                        <input type="submit" value="apply" class="button-green">
+                            value="">
+                        <input type="submit" value="apply" class="button button-green">
                     </form>
                     <a href="./cart.html" class="header__cart">
                         <div class="icon cart"></div>
@@ -71,9 +71,33 @@
     </header>
 
     <main class="main">
-        <section class="hero">
-            <h1>Home page</h1>
+        <section class="home-hero">
+            <div class="home-hero__container container">
+                <div class="home-hero__content">
+                    <h2 class="hero-first-title">XL&nbsp;New&nbsp;York</h2>
+                    <h1 class="hero-second-title">Style&nbsp;Pizza</h1>
+                    <p class="hero-subtitle">With 8 Oversized, Foldable Slices</p>
+                    <div>
+                        <div class="hero-price">
+                            <div class="hero-price1">Only</div>
+                            <div class="hero-price2"><span>$</span><span>11.99</span></div>
+                        </div>
+                        <a href="./cart" class="hero-btn button button-white button-round">order&nbsp;now</a>
+                    </div>
+                </div>
+                <div class="home-hero__img"></div>
+            </div>
         </section>
+        <section class="deals-slider">
+
+        </section>
+        <section class="explore-menu">
+
+        </section>
+        <section class="popular">
+
+        </section>
+    </main>
 
     </main>
 
