Day15: Pizza Shop Website Project - Popular pizza section

--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
@@ -39,7 +39,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="top-nav-link button button-green button-round" id="signup-btn">Sign&nbsp;up</a>
+                            <a href="#" class="top-nav-link button button-green button-round"
+                                id="signup-btn">Sign&nbsp;up</a>
                         </li>
                     </ul>
                 </nav>
@@ -60,7 +61,7 @@
                             value="">
                         <input type="submit" value="apply" class="button button-green">
                     </form>
-                    <a href="./cart.html" class="header__cart">
+                    <a href="./checkout.html" class="header__cart">
                         <div class="icon cart"></div>
                         <div class="order-total"><span>$</span><span>0.00</span></div>
                     </a>
@@ -82,23 +83,68 @@
                             <div class="hero-price1">Only</div>
                             <div class="hero-price2"><span>$</span><span>11.99</span></div>
                         </div>
-                        <a href="./cart" class="hero-btn button button-white button-round">order&nbsp;now</a>
+                        <a href="./checkout.html" class="hero-btn button button-white button-round">order&nbsp;now</a>
                     </div>
                 </div>
                 <div class="home-hero__img"></div>
             </div>
         </section>
-        <section class="deals-slider">
+        <!-- <section class="deals-slider">
 
         </section>
         <section class="explore-menu">
 
-        </section>
+        </section> -->
         <section class="popular">
-
+            <div class="container">
+                <div class="popular__content section__content">
+                    <h2 class="section-header">Most popular</h2>
+                    <div class="pizza-cards-container">
+                        <div class="pizza-card">
+                            <img class="pizza-card__img" src="../assets/images/CYO-pizza.jpg"
+                                alt="Create Your Own Pizza Image">
+                            <div class="pizza-card__content">
+                                <h3 class="pizza-card__title">Create Your Own Pizza</h3>
+                                <a href="./checkout.html" class="button button-green button-round">Order now</a>
+                            </div>
+                        </div>
+                        <div class="pizza-card">
+                            <a href="./peperoni-details.html">
+                                <img class="pizza-card__img" src="../assets/images/Original-Crust-Pepperoni.jpg"
+                                    alt="Pepperoni Pizza Image">
+                            </a>
+                            <div class="pizza-card__content">
+                                <h3 class="pizza-card__title">Pepperoni Pizza</h3>
+                                <a href="./peperoni-details.html" class="pizza-card__details">Details</a>
+                                <a href="./checkout.html" class="button button-green button-round">Order now</a>
+                            </div>
+                        </div>
+                        <div class="pizza-card">
+                            <a href="./sausage-details.html">
+                                <img class="pizza-card__img" src="../assets/images/sausagepp-slated.webp"
+                                    alt="Sausage Pizza Image">
+                            </a>
+                            <div class="pizza-card__content">
+                                <h3 class="pizza-card__title">Sausage Pizza</h3>
+                                <a href="./sausage-details.html" class="pizza-card__details">Details</a>
+                                <a href="./checkout.html" class="button button-green button-round">Order now</a>
+                            </div>
+                        </div>
+                        <div class="pizza-card">
+                            <a href="./cheese-details.html">
+                                <img class="pizza-card__img" src="../assets/images/Original-Crust-Cheese.webp"
+                                    alt="Cheese Pizza Image">
+                            </a>
+                            <div class="pizza-card__content">
+                                <h3 class="pizza-card__title">Cheese Pizza</h3>
+                                <a href="./cheese-details.html" class="pizza-card__details">Details</a>
+                                <a href="./checkout.html" class="button button-green button-round">Order now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-    </main>
-
     </main>
 
     <footer class="footer">
