Day15: Pizza Shop Website Project - add and style footer

--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
@@ -148,7 +148,25 @@
     </main>
 
     <footer class="footer">
-        <h3>Footer</h3>
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__copyright">&copy;2024 Papa John's International, Inc. All Rights Reserved.</div>
+                <div class="footer__social-icons">
+                    <a href="https://www.facebook.com/papajohnsus" target="_blank">
+                        <div class="icon facebook"></div>
+                    </a>
+                    <a href="https://x.com/papajohns" target="_blank">
+                        <div class="icon twitter"></div>
+                    </a>
+                    <a href="https://www.youtube.com/user/papajohns" target="_blank">
+                        <div class="icon youtube"></div>
+                    </a>
+                    <a href="https://www.instagram.com/papajohns/" target="_blank">
+                        <div class="icon instagram"></div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
