--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
@@ -20,11 +20,13 @@
                         alt="Papa Johns Logo"></a>
                 <nav class="header__top-nav">
                     <ul class="header__nav-list">
-                        <li><a href="#" class="top-nav-link">
+                        <li>
+                            <a href="#" class="top-nav-link">
                                 <div class="icon tracker"></div>
-                                <div>Track My Order</div>
-                            </a></li>
-                        <li><a href="#" class="top-nav-link">Start Your Order</a></li>
+                                <div>Track&nbsp;My&nbsp;Order</div>
+                            </a>
+                        </li>
+                        <li><a href="#" class="top-nav-link">Start&nbsp;Your&nbsp;Order</a></li>
                         <li>
                             <a href="#" class="top-nav-link">
                                 <div class="icon globe"></div>
@@ -41,6 +43,9 @@
                         <li>
                             <a href="#" class="top-nav-link button button-green button-round"
                                 id="signup-btn">Sign&nbsp;up</a>
+                        </li>
+                        <li class="header__burger-btn">
+                            <div class="icon burger"></div>
                         </li>
                     </ul>
                 </nav>
@@ -65,6 +70,7 @@
                         <div class="icon cart"></div>
                         <div class="order-total"><span>$</span><span>0.00</span></div>
                     </a>
+                    <a href="#" class="button button-green button-round" id="login-btn">Log&nbsp;in</a>
                 </div>
             </div>
         </div>
