Day15: Pizza Shop Website Project - popular pizza section for small screens

--- a/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
+++ b/sprint-1/15-html-css/exercise/papa-johns-design-copy/pages/index.html
@@ -55,9 +55,9 @@
             <div class="header__bottom">
                 <nav class="header__bottom-nav">
                     <ul class="header__nav-list">
-                        <li><a href="./menu.html" class="bottom-nav-link">Menu</a></li>
-                        <li><a href="./deals.html" class="bottom-nav-link">Deals</a></li>
-                        <li><a href="./rewards.html" class="bottom-nav-link">papa&nbsp;rewards</a></li>
+                        <li><a href="#" class="bottom-nav-link">Menu</a></li>
+                        <li><a href="#" class="bottom-nav-link">Deals</a></li>
+                        <li><a href="#" class="bottom-nav-link">papa&nbsp;rewards</a></li>
                     </ul>
                 </nav>
                 <div class="header__promo-cart">
