--- a/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
+++ b/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
@@ -9,26 +9,29 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="css/main.css">
     <script src="js/shopping-service.js"></script>
 </head>
 
 <body>
+    <main class="main-container">
+        <div class="shopping-list">
+            <h1 id="title"></h1>
+            <ul id="groceries">
+                <!-- add groceries here -->
+            </ul>
+        </div>
 
-    <div class="shopping-list">
-        <h1 id="title"></h1>
-        <ul id="groceries">
-            <!-- add groceries here -->
-        </ul>
-    </div>
+        <a href="#" class="btn">
+            Mark All Completed
+        </a>
 
-    <a href="#" class="btn">
-        Mark All Completed
-    </a>
-
-    <script src="js/shopping-list.js"></script>
+        <script src="js/shopping-list.js"></script>
+    </main>
 </body>
 
 </html>
