Day30: Shopping List - implement markCompleted function

--- a/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
+++ b/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
@@ -26,9 +26,9 @@
             </ul>
         </div>
 
-        <a href="#" class="btn">
+        <button class="btn" onclick="markCompleted()">
             Mark All Completed
-        </a>
+        </button>
 
         <script src="js/shopping-list.js"></script>
     </main>
