Day30: Shopping List - implement markUncompleted function

--- a/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
+++ b/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
@@ -26,9 +26,14 @@
             </ul>
         </div>
 
-        <button class="btn" onclick="markCompleted()">
-            Mark All Completed
-        </button>
+        <div class="buttons_container">
+            <button class="btn" onclick="markCompleted()">
+                Mark All Completed
+            </button>
+            <button class="btn" onclick="markUncompleted()">
+                Mark All Uncompleted
+            </button>
+        </div>
 
         <script src="js/shopping-list.js"></script>
     </main>
