Day30: Shopping List - create elements-utils and move creating elements to this file

--- a/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
+++ b/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="css/main.css">
     <script src="js/shopping-service.js"></script>
+    <script src="js/elements-utils.js"></script>
 </head>
 
 <body>
