Day30: Shopping List - add some styles

--- a/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
+++ b/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/index.html
@@ -28,10 +28,10 @@
         </div>
 
         <div class="buttons_container">
-            <button class="btn" onclick="markCompleted()">
+            <button class="btn completed-btn" onclick="markCompleted()">
                 Mark All Completed
             </button>
-            <button class="btn" onclick="markUncompleted()">
+            <button class="btn uncompleted-btn" onclick="markUncompleted()">
                 Mark All Uncompleted
             </button>
         </div>
