API Review: add edit category form

--- a/sprint-3/08-api-review/client-web-app/products.html
+++ b/sprint-3/08-api-review/client-web-app/products.html
@@ -6,6 +6,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/minty/bootstrap.min.css" integrity="sha512-+/uDiVv4ZLhHnXToJFPwYK08kkG2et1rSuiitOl+0hdzmx2N6HQaMqm/7ORzr8dhco+cyGZCRxkXU7EMMYOLfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
 
     <!--  JS  -->
@@ -46,18 +47,6 @@
 <main class="container mt-4 categories-container" id="categories-container">
 
 </main>
-
-<template id="category-template">
-    <div class="card category-card">
-        <div id="category-header" class="card-header"></div>
-        <div id="category-body" class="card-body">
-            <img id="category-image">
-        </div>
-        <div class="card-footer">
-            <div id="delete-button" class="btn btn-link">delete</div>
-        </div>
-    </div>
-</template>
 
 <div class="add-form-screen d-none" id="add-form-screen">
     <form class="card add-form" id="add-form">
