--- a/sprint-3/08-api-review/client-web-app/index.html
+++ b/sprint-3/08-api-review/client-web-app/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Northwind Home</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/minty/bootstrap.min.css" integrity="sha512-+/uDiVv4ZLhHnXToJFPwYK08kkG2et1rSuiitOl+0hdzmx2N6HQaMqm/7ORzr8dhco+cyGZCRxkXU7EMMYOLfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/minty/bootstrap.min.css"
+        integrity="sha512-+/uDiVv4ZLhHnXToJFPwYK08kkG2et1rSuiitOl+0hdzmx2N6HQaMqm/7ORzr8dhco+cyGZCRxkXU7EMMYOLfQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
 
     <!--  JS  -->
@@ -14,72 +18,101 @@
     <script src="js/services/categories-service.js"></script>
     <script src="js/pages/categories.js"></script>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Northwind</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="products.html">Products</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<main class="container mt-4">
-    <h1>Categories</h1>
-    <button id="add-button" class="btn btn-warning">Add</button>
-</main>
-
-<main class="container mt-4 categories-container" id="categories-container">
-
-</main>
-
-<template id="category-template">
-    <div class="card category-card">
-        <div id="category-header" class="card-header"></div>
-        <div id="category-body" class="card-body">
-            <img id="category-image">
-        </div>
-        <div class="card-footer">
-            <div id="delete-button" class="btn btn-link">delete</div>
-        </div>
-    </div>
-</template>
-
-<div class="add-form-screen d-none" id="add-form-screen">
-    <form class="card add-form" id="add-form">
-        <div class="card-header">
-            <h1>Add New Category</h1>
-        </div>
-        <div class="card-body">
-
-            <div class="form-floating mb-3">
-                <input class="form-control" type="text" id="category-name" placeholder="Category Name" required>
-                <div class="invalid-feedback">Enter the category name.</div>
-                <label for="category-name">Category Name</label>
-            </div>
-            <div class="form-floating mb-3">
-                <textarea class="form-control" rows="4" id="category-description" placeholder="Description" required ></textarea>
-                <div class="invalid-feedback">Enter the description.</div>
-                <label for="category-description">Description</label>
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Northwind</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="products.html">Products</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="card-footer add-form-buttons">
-            <button class="btn btn-danger" id="cancel-button" type="reset">Cancel</button>
-            <button class="btn btn-success" id="save-button" type="submit">Save</button>
+    </nav>
+
+    <main class="container mt-4">
+        <h1>Categories</h1>
+        <button id="add-button" class="btn btn-warning">Add</button>
+    </main>
+
+    <main class="container mt-4 categories-container" id="categories-container">
+
+    </main>
+
+    <template id="category-template">
+        <div class="card category-card">
+            <div id="category-header" class="card-header"></div>
+            <div id="category-body" class="card-body">
+                <img id="category-image">
+            </div>
+            <div class="card-footer d-flex flex-row justify-content-between align-items-center">
+                <div id="edit-button" class="btn btn-link"><i class="fa fa-pencil"></i></div>
+                <div id="delete-button" class="btn btn-link"><i class="fa fa-trash"></i></div>
+            </div>
         </div>
-    </form>
-</div>
+    </template>
+
+    <div class="add-form-screen d-none" id="add-form-screen">
+        <form class="card add-form" id="add-form">
+            <div class="card-header">
+                <h1>Add New Category</h1>
+            </div>
+            <div class="card-body">
+                <div class="form-floating mb-3">
+                    <input class="form-control" type="text" id="category-name" placeholder="Category Name" required>
+                    <div class="invalid-feedback">Enter the category name.</div>
+                    <label for="category-name">Category Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <textarea class="form-control" rows="4" id="category-description" placeholder="Description"
+                        required></textarea>
+                    <div class="invalid-feedback">Enter the description.</div>
+                    <label for="category-description">Description</label>
+                </div>
+            </div>
+            <div class="card-footer add-form-buttons">
+                <button class="btn btn-danger" id="cancel-button" type="reset">Cancel</button>
+                <button class="btn btn-success" id="save-button" type="submit">Save</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="edit-form-screen d-none" id="edit-form-screen">
+        <form class="card edit-form" id="edit-form">
+            <div class="card-header">
+                <h1>Edit Category</h1>
+            </div>
+            <div class="card-body">
+                <div class="form-floating mb-3">
+                    <input class="form-control" type="text" id="category-name" placeholder="Category Name" required>
+                    <div class="invalid-feedback">Enter the category name.</div>
+                    <label for="category-name">Category Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <textarea class="form-control" rows="4" id="category-description" placeholder="Description"
+                        required></textarea>
+                    <div class="invalid-feedback">Enter the description.</div>
+                    <label for="category-description">Description</label>
+                </div>
+            </div>
+            <div class="card-footer add-form-buttons">
+                <button class="btn btn-danger" id="cancel-edit-button" type="reset">Cancel</button>
+                <button class="btn btn-success" id="save-edit-button" type="submit">Save</button>
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
